<resources>
    <string name="rankedAndApproved">Ranked &amp; Approved</string>
    <string name="PendingAndWIP">Pending &amp; WIP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">------</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string-array name="download_mirror_name">
        <item>Sayobot (Recommend)</item>
        <item>Sayobot(HK) (Recommend if you are not in mainland China)</item>
        <item>Bloodcat (Deprecated)</item>
    </string-array>
    <string-array name="download_mirror_code">
        <item>0</item>
        <item>1</item>
        <item>1000</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="powered_by_sayobot_cn">Powered by sayobot.cn</string>
    <string name="my_profile">github.com/EdrowsLuo</string>
    <string name="setting">Setting</string>
    <string name="help">Help</string>
    <string name="download_setting">Download Setting</string>
    <string name="update_setting">Update Setting</string>
    <string name="default_download_path">Default download directory</string>
    <string name="mania_mode_dir">Directory for maps that osu!droid do not support</string>
    <string name="auto_unzip">Auto unzip</string>
    <string name="auto_update">Auto update</string>
    <string name="beatmap_mirror">Mirror</string>
    <string name="check_update">Check update</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="storage_permission">this app need storage permission!</string>
    <string name="storage_permission_granted">Storage permission granted!</string>
    <string name="support_text">Support creator&amp;mirror</string>
    <string name="osu_droid_download">osu!droid Download</string>
    <string name="none_std_confirm_text">You are trying to download a beatmap that osu!droid not supported，click OK to continue download</string>
    <string name="warning">Warning</string>
</resources>
