<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="General">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/setting"
                android:title="@string/setting" />
            <item
                android:id="@+id/nav_check_update"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/check_update" />
            <item
                android:id="@+id/nav_support"
                android:icon="@drawable/donate"
                android:title="@string/support_text" />
            <item
                android:id="@+id/nav_ops_dgsrz"
                android:icon="@drawable/heart"
                android:title="@string/osu_droid_download" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/help"
                android:title="@string/help" />
        </menu>
    </item>

</menu>
