<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="default"
        android:inputType="textCapWords"
        android:key="default_download_path"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/default_download_path" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="default"
        android:inputType="textCapWords"
        android:key="default_download_path_mania"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/mania_mode_dir" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="auto_unzip"
        android:title="@string/auto_unzip" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/download_mirror_name"
        android:entryValues="@array/download_mirror_code"
        android:key="beatmap_origin"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/beatmap_mirror" />

</PreferenceScreen>